Update to junit-jupiter; Utilize Java 21 virtual threads for performance